# actix-web-socket-io

./: Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic/src/infra/: socket.rs
examples/basic/src/service/: mod.rs  realtime.rs
examples/basic/src/validate/: mod.rs
examples/basic/src/websocket/: bar.rs  foo.rs  mod.rs
src/: lib.rs  session.rs  socketio.rs
