[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web-socket-io = { path = '../../' }
actix-web = "4.9.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = [
    "clock",
    "std",
    "serde",
] }
crossbeam = { version = "0.8" }
lazy_static = "1.5"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}